# cmake-learn

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  cmake_install.cmake  install.sh  install_manifest.txt  main.c  whatEndian.c
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
src/demo/: CMakeLists.txt  demo-0.c  demo.h
src/demo/fun/: fun.c  fun.h
src/fun/: CMakeLists.txt  Makefile  cmake_install.cmake
src/tools/: CMakeCache.txt  CMakeLists.txt  Makefile  android-elf-cleaner.cc  cmake_install.cmake
